[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoparaselenium"
authors = [
    {name = "Ronak Badhe", email = "ronak.badhe@gmail.com"},
]
description = "A library to make parallel selenium tests that automatically download and setup webdrivers"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["selenium", "automatic", "parallel", "testing"]
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=6.2.4",
    "pytest-parallel-39==0.1.0",
    "requests>=2.24.0",
    "selenium>=4.1.0"
]
dynamic = ["version"]

[tool.setuptools]
packages = [ "autoparaselenium" ]

[tool.setuptools_scm]
